cmake_minimum_required(VERSION 3.10)
project(Assembler)

set(CMAKE_CXX_STANDARD 11)

add_executable(Assembler main.cpp predefined_data_structures/asm_COL.h predefined_data_structures/asm_COL.cpp predefined_data_structures/machine_code_COL.cpp predefined_data_structures/machine_code_COL.h predefined_data_structures/symbol_table.cpp predefined_data_structures/symbol_table.h converter_set/abstract_converter.h converter_set/abstract_converter.cpp converter_set/add_inst_converter.h assembler.cpp assembler.h predefined_data_structures/abstruct_ASM_COL.cpp predefined_data_structures/abstruct_ASM_COL.h predefined_data_structures/data_def_pseudo_inst_COL.cpp predefined_data_structures/data_def_pseudo_inst_COL.h util/string_util/string_util.h util/string_util/string_util.cpp util/inst_set.h predefined_data_structures/coe.cpp predefined_data_structures/coe.h)